--- a/css/main.css
+++ b/css/main.css
@@ -208,6 +208,7 @@ ul, ol {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: flex-start;
   }
 }
 
@@ -952,7 +953,7 @@ ul, ol {
 @media (min-width: 768px) {
   .footer {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     margin-bottom: 60px;
   }
 }
@@ -960,6 +961,12 @@ ul, ol {
 @media (min-width: 1200px) {
   .footer {
     align-items: baseline;
+  }
+}
+
+@media (max-width: 479px), (max-width: 768px) {
+  .footer-contacts {
+    margin-bottom: 60px;
   }
 }
 
@@ -995,6 +1002,13 @@ ul, ol {
 .come-on .list {
   display: flex;
   justify-content: space-between;
+}
+
+@media (max-width: 479px) {
+  .come-on {
+    margin: 0 auto;
+    margin-bottom: 60px;
+  }
 }
 
 @media (min-width: 480px) and (max-width: 768px) {
