--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -93,6 +93,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: flex-start;
   }
 
   @media (min-width: 1200px) {
