--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -71,9 +71,9 @@
   .wrapper-user-field {
     position: relative;
     display: block;
-   
     margin-top: 4px;
   }
+
   .input-field {
     width: 100%;
     height: 40px;
@@ -87,10 +87,7 @@
         border-color: var(--accent-color) ;
     }
   }
-  
-  
-  
-  
+
   .label-textarea {
     margin-bottom: 20px;
   }
@@ -98,14 +95,12 @@
 
   .modal-form-checkbox {
       display: flex;
-      align-items: center;
-      font-size: 14px;
-      line-height: 1.7;
       letter-spacing: var(--letter-spacing);
       border-color: var(--dark-gray-color);
-      justify-content: center;
+      justify-content: space-evenly;
       color: var(--dark-gray-color);
       font-weight: normal;
+      flex-wrap: wrap;
       
       &::before {
           content: "";
@@ -139,14 +134,33 @@
               outline: none;
           }
       }
+
+      @media (max-width: 479px) {
+        font-size: 12px;
+      }
+      
+      @media (min-width: 1200px) {
+        font-size: 14px;
+        line-height: 1.7;
+      }
+
   }
-  /*  */
+
   .confidence-link {
       font-size: 14px;
       line-height: 1.7;
       letter-spacing: var(--letter-spacing);
       color: var(--accent-color);
       text-decoration: underline;
+      
+      @media (max-width: 479px) {
+        font-size: 12px;  
+      }
+      
+      @media (min-width: 1200px) {
+        font-size: 14px;  
+        line-height: 1.7;
+      }
   }
   
   .submit-btn {
