--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,10 +1,11 @@
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 528px;
-  height: 581px;
+  position: relative;
+  /*top: 50%;
+  left: 50%;*/
+  /*transform: translate(-50%, -50%);*/
+  margin: 0 auto;
+  max-width: 450px;
+  overflow-y: scroll;
   border-radius: 4px;
   background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -28,6 +29,11 @@
           fill: var(--accent-color);  
       }
   }
+
+ @media (min-width: 1200px)
+ {
+   max-width: 528;
+ }
 
 }
 
