--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -398,6 +398,12 @@ ul, ol {
   color: var(--white-color);
 }
 
+@media (max-width: 479px), (min-width: 480px) {
+  .logo {
+    margin-left: 15px;
+  }
+}
+
 .footer-bg.letter {
   margin-bottom: 20px;
   /* outline: 1px solid orange; */
@@ -747,7 +753,8 @@ ul, ol {
 
 /* subscription-form */
 .sign-up__email {
-  width: 358px;
+  position: relative;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -760,6 +767,7 @@ ul, ol {
   font-size: 20px;
   line-height: 1.15;
   letter-spacing: var(--letter-spacing);
+  margin-right: 15px;
 }
 
 .sign-up__email::placeholder {
