--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -12,6 +12,10 @@
     &_dark {
       color: var(--white-color);
     }
+
+    @media (max-width: 479px), (min-width: 480px) {
+      margin-left: 15px;
+    }
   
   }
   .footer-bg.letter{
