--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -130,7 +130,8 @@
 /* subscription-form */
 .sign-up {
   &__email {
-      width: 358px;
+    position: relative;
+      width: 100%;
       height: 50px;    
       border: 1px solid rgba(255, 255, 255, 0.3);
       border-radius: 4px;
@@ -143,7 +144,7 @@
       font-size: 20px;
       line-height: 1.15;
       letter-spacing: var(--letter-spacing);
-
+      margin-right: 15px;
       &::placeholder {    
           font-size: 16px;
           line-height: 1.25;
@@ -152,7 +153,6 @@
       }
       @media (min-width: 768px) and (max-width: 1199px) {
         width: 450px;
-       
         margin: 0;
       }
       @media (min-width: 1200px) {
