И3справл1яет 8баги по перво4му 3с8б4миту

--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -4,6 +4,33 @@
     font-size: 26px;
     line-height: 1.19;
     /* identical to box height */
+  }
+
+  @media screen and (max-width: 1199px) {
+    .header .logo {
+      padding-top: 26px;
+      padding-bottom: 26px;
+    }
+  }
+  
+  @media screen and (max-width: 767px) {
+    .header .logo {
+      padding-top: 16px;
+      padding-bottom: 16px;
+    }
+  }
+  
+  @media screen and (min-width: 1200px) {
+    .logo {
+      font-size: 26px;
+      line-height: 1.19;
+  
+      .header & {
+        padding-top: 24px;
+        padding-bottom: 25px;
+      }
+    }
+  }
 
     &_light {
       color: var(--mostly-black-color);
@@ -13,11 +40,7 @@
       color: var(--white-color);
     }
 
-    @media (max-width: 479px), (min-width: 480px) {
-      margin-left: 15px;
-    }
   
-  }
   .footer-bg.letter{
     margin-bottom: 20px;
     /* outline: 1px solid orange; */
