--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -13,7 +13,7 @@
   transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 93px 15px;
 
-  @media (min-width: 768px) {
+ /* @media (min-width: 768px) {
     padding-top: 208px;
-  }
+  }*/
 }
