--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -4,6 +4,13 @@
   width: 100%;
   height: 100%; 
   padding: 40px; 
+  position: fixed;
+  z-index: 50;
+  overflow-y: scroll;
+  @media screen and (max-width: 768px) {
+    padding: 40px;
+    position: relative;
+  }
 
   &__title {
       display: block;
@@ -94,23 +101,23 @@
   
 
   .modal-form-checkbox {
-      display: flex;
-      letter-spacing: var(--letter-spacing);
-      border-color: var(--dark-gray-color);
-      justify-content: space-evenly;
-      color: var(--dark-gray-color);
-      font-weight: normal;
-      flex-wrap: wrap;
-      
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: var(--letter-spacing);
+    border-color: var(--dark-gray-color);
+    color: var(--dark-gray-color);
+    font-weight: normal;
+
       &::before {
           content: "";
-          display: block;
           background-image: url(../images/checkbox/checkbox.svg);
           background-repeat: no-repeat;
           background-size: contain;
           width: 16px;
           height: 16px;
-          margin-right: 7px;
+          margin-right: 2px;
           border: 2px solid var(--mostly-black-color);
           border-radius: 2px;
           cursor: pointer;  
@@ -135,32 +142,22 @@
           }
       }
 
-      @media (max-width: 479px) {
-        font-size: 12px;
-      }
-      
-      @media (min-width: 1200px) {
-        font-size: 14px;
-        line-height: 1.7;
-      }
-
   }
 
   .confidence-link {
-      font-size: 14px;
+      font-size: 12px;
       line-height: 1.7;
       letter-spacing: var(--letter-spacing);
       color: var(--accent-color);
       text-decoration: underline;
       
-      @media (max-width: 479px) {
-        font-size: 12px;  
+      /*@media (max-width: 479px) {
+        font-size: 9px;  
       }
       
       @media (min-width: 1200px) {
-        font-size: 14px;  
-        line-height: 1.7;
-      }
+        font-size: 9px;  
+      }*/
   }
   
   .submit-btn {
