--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -51,10 +51,14 @@
 
 .card-project {
   & .name-card {
+    border: 1px solid tomato;
+    border-top: none;
     text-align: left;
     padding: 20px 24px;
   }
-
+  @media screen and (max-width: 1199px) {
+    flex-grow: 1;
+  }
   &__link {
     display: block;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
