--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -12,7 +12,8 @@
   max-width: 480px;
   margin-left: auto;
   margin-right: auto;
-
+  background-position: center;
+  
   & .container {
       text-align: center;
   }
