--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -16,6 +16,7 @@
         position: relative;
         justify-content: space-between;
         padding: 32px 0px;
+        margin: 0 15px;
       }
   }
 }
