--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -587,26 +587,27 @@ ul, ol {
   color: var(--transparent-white-color);
 }
 
-.card-project .name-card {
-  border: 1px solid tomato;
+.card-project__link {
+  display: flex;
+  flex-direction: column;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card-project__link:hover, .card-project__link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.card-project__name-card {
+  border: 1px solid #eee;
   border-top: none;
   text-align: left;
   padding: 20px 24px;
 }
 
 @media screen and (max-width: 1199px) {
-  .card-project {
+  .card-project__name-card {
     flex-grow: 1;
   }
-}
-
-.card-project__link {
-  display: block;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.card-project__link:hover, .card-project__link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .card-project__wrapper {
