--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -50,23 +50,28 @@
 }
 
 .card-project {
-  & .name-card {
-    border: 1px solid tomato;
-    border-top: none;
-    text-align: left;
-    padding: 20px 24px;
-  }
-  @media screen and (max-width: 1199px) {
-    flex-grow: 1;
-  }
+
+
   &__link {
-    display: block;
+    display: flex;
+    flex-direction: column;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
     &:hover,
     &:focus {
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
             1px 4px 6px rgba(0, 0, 0, 0.16);         
+      }
+    }
+
+    &__name-card {
+      border: 1px solid #eee ;
+      border-top: none;
+      text-align: left;
+      padding: 20px 24px;
+  
+      @media screen and (max-width: 1199px) {
+        flex-grow: 1;
       }
     }
 
@@ -97,6 +102,8 @@
             opacity: 1;
       }
     }
+
+    
 }
 
 
