--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -84,6 +84,7 @@ ul, ol {
   padding-left: 15px;
   padding-right: 15px;
   width: 100%;
+  overflow: hidden;
 }
 
 @media (min-width: 480px) {
@@ -112,21 +113,34 @@ ul, ol {
 
 .header {
   background: var(--white-color);
-  display: flex;
-  align-items: center;
   border-bottom: 1px solid #ececec;
 }
 
 .header .container {
   display: flex;
+  align-items: center;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 479px) {
+  .header .container {
+    padding: 0 15px;
+    position: relative;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: 480px) and (max-width: 767px) {
   .header .container {
     position: relative;
     justify-content: space-between;
-    padding: 32px 0px;
-    margin: 0 15px;
+    padding: 0 15px;
+  }
+}
+
+@media (min-width: 479px) {
+  .header {
+    position: relative;
+    justify-content: space-between;
   }
 }
 
@@ -409,6 +423,7 @@ ul, ol {
 
 @media screen and (max-width: 767px) {
   .header .logo {
+    position: relative;
     padding-top: 16px;
     padding-bottom: 16px;
   }
@@ -782,6 +797,10 @@ ul, ol {
 }
 
 /* subscription-form */
+.sign-up {
+  overflow-y: hidden;
+}
+
 .sign-up__email {
   position: relative;
   width: 100%;
@@ -797,7 +816,6 @@ ul, ol {
   font-size: 20px;
   line-height: 1.15;
   letter-spacing: var(--letter-spacing);
-  margin-right: 15px;
 }
 
 .sign-up__email::placeholder {
@@ -809,21 +827,22 @@ ul, ol {
 
 @media (min-width: 768px) and (max-width: 1199px) {
   .sign-up__email {
-    width: 450px;
+    max-width: 450px;
     margin: 0;
   }
 }
 
 @media (min-width: 1200px) {
   .sign-up__email {
-    width: 358px;
+    max-width: 358px;
     margin: 0;
   }
 }
 
 .sign-up__btn {
-  width: 200px;
-  height: 50px;
+  position: relative;
+  max-width: 200px;
+  max-height: 50px;
   padding: 10px 28px;
   background-color: var(--accent-color);
   border-radius: 4px;
