--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -1,9 +1,8 @@
-.clients {
-  & .container {
+.clients__container {
     padding-top: 94px;
     padding-bottom: 94px;
   }
-}
+
 
 .client-list {
   margin-top: -30px;
