--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -129,6 +129,7 @@
 
 /* subscription-form */
 .sign-up {
+  overflow-y: hidden;
   &__email {
     position: relative;
       width: 100%;
@@ -144,7 +145,6 @@
       font-size: 20px;
       line-height: 1.15;
       letter-spacing: var(--letter-spacing);
-      margin-right: 15px;
       &::placeholder {    
           font-size: 16px;
           line-height: 1.25;
@@ -152,18 +152,19 @@
           color: rgba(255, 255, 255, 0.6);
       }
       @media (min-width: 768px) and (max-width: 1199px) {
-        width: 450px;
+        max-width: 450px;
         margin: 0;
       }
       @media (min-width: 1200px) {
-        width: 358px;
+        max-width: 358px;
         margin: 0;
       }
   }
 
   &__btn {
-    width: 200px;
-    height: 50px;
+    position: relative;
+    max-width: 200px;
+    max-height: 50px;
     padding: 10px 28px;
     background-color: var(--accent-color);
     border-radius: 4px;
