--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -2,16 +2,17 @@
   position: fixed;
   top: 0;
   left: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
+  padding: 93px 0px;
+
   overflow-y: scroll;
   background-color: rgba(0, 0, 0, 0.2);
-  scale: 1;
   opacity: 1;
 
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
   transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 93px 15px;
+  
 
  /* @media (min-width: 768px) {
     padding-top: 208px;
