--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -23,6 +23,7 @@
   
   @media screen and (max-width: 767px) {
     .header .logo {
+      position:relative;
       padding-top: 16px;
       padding-bottom: 16px;
     }
