--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -1,10 +1,5 @@
 .form {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%; 
-  padding: 40px; 
-
+  justify-content: center;
   &__title {
       display: block;
       margin-bottom: 12px;
@@ -102,10 +97,10 @@
     border-color: var(--dark-gray-color);
     color: var(--dark-gray-color);
     font-weight: normal;
-    justify-content: space-evenly;
+    /*flex-wrap: wrap;*/
+    float: left;
 
-    flex-wrap: wrap;
-      &::before {
+      & .unchecked {
           content: "";
           background-repeat: no-repeat;
           background-size: contain;
@@ -115,8 +110,7 @@
           border: 2px solid var(--mostly-black-color);
           border-radius: 2px;
           cursor: pointer;  
-          scale: 1; 
-      
+
           transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
           transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
           background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
