--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,6 +3,7 @@
   /*top: 50%;
   left: 50%;*/
   /*transform: translate(-50%, -50%);*/
+  padding: 40px;
   margin: 0 auto;
   max-width: 450px;
   overflow-y: scroll;
