--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,19 +5,27 @@
 
 .header {
   background: var(--white-color);
-  display: flex;
-  align-items: center;
   border-bottom: 1px solid #ececec;
   
   & .container {
       display: flex;
-    
-      @media (max-width: 767px) {
+      align-items: center;
+      
+      @media  (max-width: 479px) {
+        padding: 0 15px;
+        position: relative;
+        justify-content:space-between;
+      }
+      @media (min-width: 480px) and (max-width: 767px) {
         position: relative;
         justify-content: space-between;
-        padding: 32px 0px;
-        margin: 0 15px;
+        padding: 0 15px;
       }
+  }
+
+  @media  (min-width: 479px) {
+    position: relative;
+    justify-content:space-between;
   }
 }
 
