исправляет баги по модалке

--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -7,6 +7,10 @@ body {
     line-height: 1.14;
     letter-spacing: 0.02em;
     background-color: var(--white-color);
+
+    @media (max-width: 480px) {
+      min-width: 450px;
+    }
   }
   img {
     display: block;
