--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,12 @@ body {
   background-color: var(--white-color);
 }
 
+@media (max-width: 480px) {
+  body {
+    min-width: 450px;
+  }
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -1213,14 +1219,17 @@ ul, ol {
   left: 0;
   height: 100vh;
   width: 100vw;
-  padding: 93px 0px;
-  overflow-y: scroll;
+  padding: 93px 15px;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* @media (min-width: 768px) {
-    padding-top: 208px;
-  }*/
+}
+
+@media (max-width: 480px) {
+  .backdrop {
+    min-width: 450px;
+    min-height: 100%;
+  }
 }
 
 .modal {
@@ -1270,7 +1279,10 @@ ul, ol {
 }
 
 .form {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-content: center;
 }
 
 .form__title {
@@ -1364,7 +1376,7 @@ ul, ol {
   border-color: var(--dark-gray-color);
   color: var(--dark-gray-color);
   font-weight: normal;
-  /*flex-wrap: wrap;*/
+  flex-wrap: wrap;
   float: left;
 }
 
