--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -30,6 +30,12 @@ body {
   background-color: var(--white-color);
 }
 
+@media (max-width: 480px) {
+  body {
+    min-width: 450px;
+  }
+}
+
 img {
   display: block;
   max-width: 100%;
