--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -4,9 +4,8 @@
   left: 0;
   height: 100vh;
   width: 100vw;
-  padding: 93px 0px;
+  padding: 93px 15px;
 
-  overflow-y: scroll;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
 
@@ -14,7 +13,8 @@
   transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 
- /* @media (min-width: 768px) {
-    padding-top: 208px;
-  }*/
+  @media (max-width: 480px) {
+    min-width: 450px;
+    min-height: 100%;
+  }
 }
