--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -28,12 +28,9 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   background-color: var(--white-color);
-}
-
-@media (max-width: 480px) {
-  body {
-    min-width: 460px;
-  }
+  /*@media (max-width: 480px) {
+      min-width: 460px;
+    }*/
 }
 
 img {
@@ -74,6 +71,24 @@ ul, ol {
   fill: var(--icons-default-color);
 }
 
+@media (max-width: 480px) {
+  section {
+    min-width: 460px;
+  }
+}
+
+@media (max-width: 480px) {
+  footer {
+    min-width: 460px;
+  }
+}
+
+@media (max-width: 480px) {
+  header {
+    min-width: 460px;
+  }
+}
+
 .visually-hidden {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
@@ -90,7 +105,12 @@ ul, ol {
   padding-left: 15px;
   padding-right: 15px;
   width: 100%;
-  overflow: hidden;
+}
+
+@media (max-width: 480px) {
+  .container {
+    min-width: 460px;
+  }
 }
 
 @media (min-width: 480px) {
