--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -8,9 +8,9 @@ body {
     letter-spacing: 0.02em;
     background-color: var(--white-color);
 
-    @media (max-width: 480px) {
+    /*@media (max-width: 480px) {
       min-width: 460px;
-    }
+    }*/
   }
   img {
     display: block;
@@ -45,3 +45,21 @@ body {
     align-items: center;
     fill: var(--icons-default-color);
   } 
+
+  section {
+    @media (max-width: 480px) {
+      min-width: 460px;
+    }
+  }
+
+  footer {
+    @media (max-width: 480px) {
+      min-width: 460px;
+    }
+  }
+  
+  header {
+    @media (max-width: 480px) {
+      min-width: 460px;
+    }
+  }
