--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -2,7 +2,11 @@
     padding-left: 15px;
     padding-right: 15px;
     width: 100%;
-    overflow: hidden;
+
+    @media (max-width: 480px) {
+      min-width: 460px;
+    }
+    
     @media (min-width: 480px) {
       width: 480px;
       margin: 0 auto;
