Поправляет ошибки по 3му сабмиту

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -28,9 +28,12 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   background-color: var(--white-color);
-  /*@media (max-width: 480px) {
-      min-width: 460px;
-    }*/
+}
+
+@media (max-width: 480px) {
+  body {
+    min-width: 450px;
+  }
 }
 
 img {
