--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -103,6 +103,8 @@
     font-weight: normal;
     flex-wrap: wrap;
     float: left;
+    justify-content: space-evenly;
+      
 
       & .unchecked {
           content: "";
