--- a/css/main.css
+++ b/css/main.css
@@ -28,9 +28,12 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   background-color: var(--white-color);
-  /*@media (max-width: 480px) {
-      min-width: 460px;
-    }*/
+}
+
+@media (max-width: 480px) {
+  body {
+    min-width: 450px;
+  }
 }
 
 img {
@@ -1211,9 +1214,10 @@ ul, ol {
   position: fixed;
   top: 0;
   left: 0;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   padding: 93px 15px;
+  overflow-y: scroll;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1226,7 +1230,7 @@ ul, ol {
   /*transform: translate(-50%, -50%);*/
   padding: 40px;
   margin: 0 auto;
-  max-width: 460px;
+  max-width: 450px;
   overflow-y: scroll;
   border-radius: 4px;
   background-color: var(--white-color);
@@ -1365,6 +1369,7 @@ ul, ol {
   font-weight: normal;
   flex-wrap: wrap;
   float: left;
+  justify-content: space-evenly;
 }
 
 .modal-form-checkbox .unchecked {
