--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -2,10 +2,10 @@
   position: fixed;
   top: 0;
   left: 0;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   padding: 93px 15px;
-
+  overflow-y: scroll;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
 
