--- a/css/main.css
+++ b/css/main.css
@@ -1188,10 +1188,6 @@ ul, ol {
   }
 }
 
-.subscription {
-  display: block;
-}
-
 .subscription__title {
   display: block;
   margin-bottom: 20px;
@@ -1203,7 +1199,7 @@ ul, ol {
   color: var(--white-color);
 }
 
-@media (min-width: 480px), (min-width: 768px), (min-width: 320px) {
+@media (max-width: 1199px) {
   .subscription {
     align-items: center;
     text-align: center;
